@@ -5,24 +5,17 @@ package com.cntinker.util;
 
 import java.io.ByteArrayOutputStream;
 import java.io.UnsupportedEncodingException;
+import java.net.InetAddress;
+import java.net.NetworkInterface;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.sql.Timestamp;
 import java.text.DateFormat;
 import java.text.DecimalFormat;
+import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Calendar;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedHashMap;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.time.*;
+import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -32,6 +25,9 @@ import sun.misc.BASE64Decoder;
  * @author bin_liu
  */
 public class StringHelper {
+
+	private static final char SEPARATOR = '_';
+	private static final String CHARSET_NAME = "UTF-8";
 
 	private static String phoneMatcher;
 
@@ -46,9 +42,59 @@ public class StringHelper {
 		phoneMatcher = query.toString();
 	}
 
+	public static String getHideEmail(String str, int type, double hidePer) {
+		String temp = str;
+		String account = temp.substring(0, temp.indexOf("@"));
+		String website = temp.substring(temp.indexOf("@"));
+
+		return getHideStr(account, type, hidePer) + website;
+	}
+
+	public static String getHideStr(String str, int type, double hidePer) {
+		String temp = str;
+		int hideCount = 0;
+		Double hc = str.length() * (hidePer * 0.01);
+		Double hc2 = new Double(String.format("%.2f", hc));
+		DecimalFormat df = new DecimalFormat("######0");
+		hideCount = new Integer(df.format(hc2));
+
+		if (type == 0) {
+			// 从头开始
+			temp = temp.substring(hideCount);
+			for (int i = 0; i < hideCount; i++) {
+				temp = "*" + temp;
+			}
+		} else if (type == 1) {
+			//中间位置
+			int d = str.length() / 2;
+			int subCount = hideCount / 2;
+			int subCountBehind = hideCount - subCount;
+			//从中间切前后
+			String subFornt = temp.substring(0, d);
+			String subBehind = temp.substring(d);
+
+			subFornt = subFornt.substring(0, subFornt.length() - subCount);
+			for (int i = 0; i < subCount; i++) {
+				subFornt = subFornt + "*";
+			}
+			subBehind = subBehind.substring(subCountBehind);
+			for (int i = 0; i < subCountBehind; i++) {
+				subBehind = "*" + subBehind;
+			}
+			return subFornt + subBehind;
+		} else if (type == 2) {
+			//最后
+			temp = temp.substring(0, temp.length() - hideCount);
+			for (int i = 0; i < hideCount; i++) {
+				temp = temp + "*";
+			}
+		}
+		return temp;
+	}
+
 	/**
 	 * 按指定长度切割字符串，方法调用传入co为null即可
-	 * 
+	 *
 	 * @param str
 	 * @param pos
 	 * @param co
@@ -70,10 +116,6 @@ public class StringHelper {
 		return split(str.substring(pos), pos, co);
 	}
 
-	public static StringHelper getInstancle() {
-		return new StringHelper();
-	}
-
 	private StringHelper() {
 
 	}
@@ -92,30 +134,19 @@ public class StringHelper {
 		int flag = 0;
 
 		for (int i = 0; i < input.length(); i++) {
-			if (i >= compare.length())
+			if (i >= compare.length()) {
 				break;
-
-			if (input.charAt(i) == compare.charAt(i))
+			}
+			if (input.charAt(i) == compare.charAt(i)) {
 				flag++;
-
+			}
 		}
 		return flag;
 	}
 
-	public static String convertUnicode(String str) {
-		Pattern pattern = Pattern.compile("(\\\\u(\\p{XDigit}{4}))");
-		Matcher matcher = pattern.matcher(str);
-		char ch;
-		while (matcher.find()) {
-			ch = (char) Integer.parseInt(matcher.group(2), 16);
-			str = str.replace(matcher.group(1), ch + "");
-		}
-		return str;
-	}
-
 	/**
 	 * 判断一个字符串是否是由英文，数字，下划线组成
-	 * 
+	 *
 	 * @param str
 	 * @return boolean
 	 */
@@ -140,15 +171,16 @@ public class StringHelper {
 			}
 			flag++;
 		}
-		if (flag == 0)
+		if (flag == 0) {
 			return true;
-		else
+		} else {
 			return false;
+		}
 	}
 
 	/**
 	 * 得到系统当前时间
-	 * 
+	 *
 	 * @return String
 	 */
 	public static String getSystime() {
@@ -158,7 +190,7 @@ public class StringHelper {
 
 	/**
 	 * 按格式获取系统当前时间
-	 * 
+	 *
 	 * @param format
 	 * @return String
 	 */
@@ -169,7 +201,7 @@ public class StringHelper {
 
 	/**
 	 * 按格式获取系统当前时间
-	 * 
+	 *
 	 * @param format
 	 * @return String
 	 */
@@ -190,7 +222,7 @@ public class StringHelper {
 
 	/**
 	 * 按格式获取系统当前时间
-	 * 
+	 *
 	 * @param format
 	 * @return String
 	 */
@@ -201,7 +233,7 @@ public class StringHelper {
 
 	/**
 	 * 得到上月的这一天0点，返回格式：yyyy-MM-dd HH:mm:ss
-	 * 
+	 *
 	 * @return String
 	 */
 	public static String getPreMonth() {
@@ -216,7 +248,7 @@ public class StringHelper {
 
 	/**
 	 * 得到下月的这一天0点，返回格式：yyyy-MM-dd HH:mm:ss
-	 * 
+	 *
 	 * @return String
 	 */
 	public static String getNextMonth() {
@@ -231,7 +263,7 @@ public class StringHelper {
 
 	/**
 	 * 指定时间的月份第一天
-	 * 
+	 *
 	 * @param time
 	 * @return String
 	 */
@@ -248,7 +280,7 @@ public class StringHelper {
 
 	/**
 	 * 指定时间的月份第一天
-	 * 
+	 *
 	 * @param time
 	 * @return String
 	 */
@@ -271,7 +303,7 @@ public class StringHelper {
 
 	/**
 	 * 指定时间的月份第一天
-	 * 
+	 *
 	 * @param time
 	 * @return String
 	 */
@@ -286,15 +318,18 @@ public class StringHelper {
 		try {
 			res = datef.parse(sTime).getTime();
 		} catch (java.text.ParseException e) {
-			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
-		return new Timestamp(res);
+		if(res != null) {
+			return new Timestamp(res);
+		}else {
+			return null;
+		}
 	}
 
 	/**
 	 * 指定时间的月份最后一天
-	 * 
+	 *
 	 * @param time
 	 * @return String
 	 */
@@ -312,7 +347,7 @@ public class StringHelper {
 
 	/**
 	 * 指定时间的月份最后一天
-	 * 
+	 *
 	 * @param time
 	 * @return Long
 	 */
@@ -337,7 +372,7 @@ public class StringHelper {
 
 	/**
 	 * 指定时间的月份最后一天
-	 * 
+	 *
 	 * @param time
 	 * @return Long
 	 */
@@ -353,16 +388,18 @@ public class StringHelper {
 		try {
 			res = datef.parse(eTime).getTime();
 		} catch (java.text.ParseException e) {
-			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
-
-		return new Timestamp(res);
+		if(res != null) {
+			return new Timestamp(res);
+		}else {
+			return null;
+		}
 	}
 
 	/**
 	 * 得到默认日期格式的时间:yyyy-MM-dd HH:mm:ss
-	 * 
+	 *
 	 * @param time
 	 * @return Long
 	 * @throws java.text.ParseException
@@ -383,21 +420,25 @@ public class StringHelper {
 
 	/**
 	 * 得到指定日期格式的时间
-	 * 
+	 *
 	 * @param time
 	 * @param formart
 	 * @return Long
 	 * @throws java.text.ParseException
 	 */
-	public static Long getTime(String time, String formart)
-			throws java.text.ParseException {
+	public static Long getTime(String time, String formart) {
 		SimpleDateFormat datef = new SimpleDateFormat(formart);
-		return datef.parse(time).getTime();
+		try {
+			return datef.parse(time).getTime();
+		} catch (ParseException e) {
+			e.printStackTrace();
+		}
+		return -1L;
 	}
 
 	/**
 	 * 当月第一天
-	 * 
+	 *
 	 * @return String
 	 */
 	public static String getFirstDay() {
@@ -413,7 +454,7 @@ public class StringHelper {
 
 	/**
 	 * 当月最后一天
-	 * 
+	 *
 	 * @return String
 	 */
 	public static String getEndDay() {
@@ -430,57 +471,102 @@ public class StringHelper {
 
 	/**
 	 * 获得星期几
-	 * 
+	 *
 	 * @return String
 	 */
 	public static String getWeek(Date date) {
-		String[] weekDays = { "星期日", "星期一", "星期二", "星期三", "星期四", "星期五", "星期六" };
+		String[] weekDays = {"星期日", "星期一", "星期二", "星期三", "星期四", "星期五", "星期六"};
 		Calendar cal = Calendar.getInstance();
 		cal.setTime(date);
 		int week = cal.get(Calendar.DAY_OF_WEEK) - 1;
-		if (week < 0)
+		if (week < 0) {
 			week = 0;
+		}
 		return weekDays[week];
 	}
 
 	/**
 	 * 得到指定类型时间间隔的之前日期
-	 * 
-	 * @param timeType
-	 *            1-天，2-月<br>
-	 * @param intervalNumber
-	 *            间隔几天/几个月<br>
-	 * @param currentTime
-	 *            指定时间<br>
+	 *
+	 * @param timeType       1-天，2-月<br>
+	 * @param intervalNumber 间隔几天/几个月<br>
+	 * @param currentTime    指定时间<br>
 	 * @return Long
 	 * @throws java.text.ParseException
 	 */
 	public static Long getBeforeTimeLong(int timeType, int intervalNumber,
-			long currentTime) throws java.text.ParseException {
+										 long currentTime) throws java.text.ParseException {
 		String time = getBeforeTimeStr(timeType, intervalNumber, currentTime);
 		return getTime(time);
 	}
 
 	/**
-	 * 得到指定类型时间间隔的之前日期
-	 * 
-	 * @param timeType
-	 *            1-天，2-月<br>
-	 * @param intervalNumber
-	 *            间隔几天/几个月<br>
-	 * @param currentTime
-	 *            指定时间<br>
+	 * 得到指定类型时间间隔的之后日期
+	 *
+	 * @param timeType       0-小时,1-天，2-月,3-年<br>
+	 * @param intervalNumber 间隔几天/几个月<br>
+	 * @param currentTime    指定时间<br>
+	 * @return Long
+	 * @throws java.text.ParseException
+	 */
+	public static Long getAfterTimeLong(int timeType, int intervalNumber,
+										long currentTime) throws java.text.ParseException {
+		String time = getAfterTimeStr(timeType, intervalNumber, currentTime);
+		return getTime(time);
+	}
+
+	/**
+	 * 得到指定类型时间间隔的之后日期
+	 *
+	 * @param timeType       0-小时,1-天，2-月,3-年<br>
+	 * @param intervalNumber 间隔几天/几个月<br>
+	 * @param currentTime    指定时间<br>
 	 * @return String
 	 */
-	public static String getBeforeTimeStr(int timeType, int intervalNumber,
-			long currentTime) {
+	public static String getAfterTimeStr(int timeType, int intervalNumber,
+										 long currentTime) {
 		Calendar calendar = Calendar.getInstance();
 		calendar.setTime(new Date(currentTime));
 
-		if (timeType == 1)
+		if (timeType == 0) {
+			calendar.add(Calendar.HOUR, +intervalNumber); // 得到前一小时
+		} else if (timeType == 1) {
+			calendar.add(Calendar.DATE, +intervalNumber); // 得到前一天
+		} else if (timeType == 2) {
+			calendar.add(Calendar.MONTH, +intervalNumber); // 得到前一个月
+		} else if (timeType == 3) {
+			calendar.add(Calendar.YEAR, +intervalNumber); // 得到前一年
+		}
+
+		StringBuffer sb = new StringBuffer();
+		sb.append(calendar.get(Calendar.YEAR)).append("-");
+		sb.append(calendar.get(Calendar.MONTH) + 1).append("-");
+		sb.append(calendar.get(Calendar.DATE)).append(" ");
+		sb.append(calendar.get(Calendar.HOUR_OF_DAY)).append(":");
+		sb.append(calendar.get(Calendar.MINUTE)).append(":");
+		sb.append(calendar.get(Calendar.SECOND));
+
+		return sb.toString();
+	}
+
+	/**
+	 * 得到指定类型时间间隔的之前日期
+	 *
+	 * @param timeType       1-天，2-月<br>
+	 * @param intervalNumber 间隔几天/几个月<br>
+	 * @param currentTime    指定时间<br>
+	 * @return String
+	 */
+	public static String getBeforeTimeStr(int timeType, int intervalNumber,
+										  long currentTime) {
+		Calendar calendar = Calendar.getInstance();
+		calendar.setTime(new Date(currentTime));
+
+		if (timeType == 1) {
 			calendar.add(Calendar.DATE, -intervalNumber); // 得到前一天
-		else if (timeType == 2)
+		} else if (timeType == 2) {
 			calendar.add(Calendar.MONTH, -intervalNumber); // 得到前一个月
+		}
 
 		StringBuffer sb = new StringBuffer();
 		sb.append(calendar.get(Calendar.YEAR)).append("-");
@@ -499,9 +585,9 @@ public class StringHelper {
 		int len = b.length;
 		for (int n = 0; n < len; n++) {
 			stmp = Integer.toHexString(b[n] & 0xFF);
-			if (stmp.length() == 1)
+			if (stmp.length() == 1) {
 				hs = hs.append("0").append(stmp);
-			else {
+			} else {
 				hs = hs.append(stmp);
 			}
 		}
@@ -510,26 +596,29 @@ public class StringHelper {
 
 	/**
 	 * 得到UNICODE码
-	 * 
+	 *
 	 * @param str
 	 * @return String
 	 */
 	public static String getUnicode(String str) {
 
-		if (str == null)
+		if (str == null) {
 			return "";
+		}
 		String hs = "";
 
 		try {
 			byte b[] = str.getBytes("UTF-16");
 			for (int n = 0; n < b.length; n++) {
 				str = (java.lang.Integer.toHexString(b[n] & 0XFF));
-				if (str.length() == 1)
+				if (str.length() == 1) {
 					hs = hs + "0" + str;
-				else
+				} else {
 					hs = hs + str;
-				if (n < b.length - 1)
+				}
+				if (n < b.length - 1) {
 					hs = hs + "";
+				}
 			}
 			str = hs.toUpperCase().substring(4);
 			char[] chs = str.toCharArray();
@@ -548,30 +637,32 @@ public class StringHelper {
 		String a = (String) o1;
 		String b = (String) o2;
 
-		if (!isDigit(a) || !isDigit(b))
+		if (!isDigit(a) || !isDigit(b)) {
 			throw new IllegalArgumentException("the object must a digit");
+		}
 
 		long aa = Long.valueOf(a).longValue();
 		long bb = Long.valueOf(b).longValue();
 
-		if (aa > bb)
+		if (aa > bb) {
 			return 1;
-		else if (aa < bb)
+		} else if (aa < bb) {
 			return -1;
+		}
 
 		return 0;
 	}
 
 	/**
 	 * 去空格并将其替换成指定字符
-	 * 
+	 *
 	 * @param content
 	 * @return String
 	 */
 	public static String alterSpace(String content, String character) {
 		StringBuffer sb = new StringBuffer();
 		for (int i = 0; i < content.length(); i++) {
-			String c = new String(new char[] { content.charAt(i) });
+			String c = new String(new char[]{content.charAt(i)});
 			if (c.trim().length() == 0) {
 				sb.append(character);
 				continue;
@@ -596,7 +687,7 @@ public class StringHelper {
 
 	/**
 	 * 判断输入是否全是中文
-	 * 
+	 *
 	 * @param value
 	 * @param length
 	 * @return boolean
@@ -607,7 +698,7 @@ public class StringHelper {
 
 	/**
 	 * 判断字符串是否含有HTML标签
-	 * 
+	 *
 	 * @param value
 	 * @return boolean
 	 */
@@ -618,7 +709,7 @@ public class StringHelper {
 
 	/**
 	 * 检查URL是否合法
-	 * 
+	 *
 	 * @param value
 	 * @return boolean
 	 */
@@ -628,7 +719,7 @@ public class StringHelper {
 
 	/**
 	 * 检查IP是否合法
-	 * 
+	 *
 	 * @param value
 	 * @return boolean
 	 */
@@ -638,7 +729,7 @@ public class StringHelper {
 
 	/**
 	 * 检查QQ是否合法，必须是数字，且首位不能字幕
-	 * 
+	 *
 	 * @param value
 	 * @return boolean
 	 */
@@ -649,7 +740,7 @@ public class StringHelper {
 
 	/**
 	 * 检查邮编是否合法
-	 * 
+	 *
 	 * @param value
 	 * @return boolean
 	 */
@@ -659,7 +750,7 @@ public class StringHelper {
 
 	/**
 	 * 检查输入的字符串是否为手机号
-	 * 
+	 *
 	 * @param line
 	 * @return List
 	 */
@@ -669,28 +760,30 @@ public class StringHelper {
 		Matcher m = null; // 操作的字符串
 		p = Pattern.compile(phoneMatcher);// 匹配移动手机号码
 		m = p.matcher(line);
-		if (m.matches())
+		if (m.matches()) {
 			return true;
+		}
 		return false;
 	}
 
 	/**
 	 * 去掉手机号码前面的86和+86符号
-	 * 
+	 *
 	 * @param phoneno
 	 * @return String
 	 */
 	public static String fixPhoneno(String phoneno) {
-		if (phoneno.length() > 11 && phoneno.startsWith("86"))
+		if (phoneno.length() > 11 && phoneno.startsWith("86")) {
 			return phoneno.substring(2);
-		else if (phoneno.length() > 11 && phoneno.startsWith("+86"))
+		} else if (phoneno.length() > 11 && phoneno.startsWith("+86")) {
 			return phoneno.substring(3);
+		}
 		return phoneno;
 	}
 
 	/**
 	 * 是否包含手机号
-	 * 
+	 *
 	 * @param line
 	 * @return boolean
 	 */
@@ -699,14 +792,15 @@ public class StringHelper {
 		Matcher m = null; // 操作的字符串
 		p = Pattern.compile(phoneMatcher);// 匹配移动手机号码
 		m = p.matcher(line);
-		if (m.find())
+		if (m.find()) {
 			return true;
+		}
 		return false;
 	}
 
 	/**
 	 * 从一行字符串中提取号码由左至右,11为数字符合手机号规则;
-	 * 
+	 *
 	 * @param line
 	 * @return String
 	 */
@@ -729,7 +823,7 @@ public class StringHelper {
 
 	/**
 	 * 按规定条件得到一个文本里的字符
-	 * 
+	 *
 	 * @param text
 	 * @param compile
 	 * @return Set
@@ -749,26 +843,18 @@ public class StringHelper {
 		return set;
 	}
 
+	private static String PHONE_PATTERN = "1[3,5][4,5,6,7,8,9]\\d{8}|15[8,9]\\d{8}";
+
 	/**
 	 * 返回所有手机号码
-	 * 
+	 *
 	 * @param strMail
 	 * @return Set
 	 */
 	public static Set getCode(String strMail) {
-		/*
-		 * int startpos = 0; for (int i = 0; i < 9; i++) { startpos =
-		 * strMail.indexOf("\n", startpos) + 1; } if(startpos>=strMail.length())
-		 * return; do { String str = strMail.substring(startpos + 7, startpos +
-		 * 18); phonelog.info(str); //maillog.info(str); set.add(str); } while
-		 * ((startpos = strMail.indexOf("\n", startpos) + 1) != -1 && startpos <
-		 * strMail.length());
-		 */
 		Set set = new HashSet();
-		Pattern p = null; // 正则表达??
-		Matcher m = null; // 操作的字符串
-		p = Pattern.compile("1[3,5][4,5,6,7,8,9]\\d{8}|15[8,9]\\d{8}");// 匹配移动手机号码
-		m = p.matcher(strMail);
+		Pattern p = Pattern.compile(PHONE_PATTERN);// 匹配移动手机号码
+		Matcher m = p.matcher(strMail);
 		while (m.find()) {
 			// System.out.println(strMail.substring(m.start(),m.end()));
 			String str = strMail.substring(m.start(), m.end());
@@ -777,9 +863,11 @@ public class StringHelper {
 		return set;
 	}
 
+	private static String CMCC_PHONE = "(?i)(?<=\\b)[a-z0-9][-a-z0-9_.]+[a-z0-9]@([a-z0-9][-a-z0-9]+\\.)+[a-z]{2,4}(?=\\b)";
+
 	/**
 	 * get email
-	 * 
+	 *
 	 * @param content
 	 * @return Set
 	 */
@@ -787,8 +875,7 @@ public class StringHelper {
 		Set set = new HashSet();
 		Pattern p = null; // 正则表达??
 		Matcher m = null; // 操作的字符串
-		p = Pattern
-				.compile("(?i)(?<=\\b)[a-z0-9][-a-z0-9_.]+[a-z0-9]@([a-z0-9][-a-z0-9]+\\.)+[a-z]{2,4}(?=\\b)");// 匹配移动手机号码
+		p = Pattern.compile(CMCC_PHONE);// 匹配移动手机号码
 		m = p.matcher(content);
 		while (m.find()) {
 			// System.out.println(strMail.substring(m.start(),m.end()));
@@ -800,7 +887,7 @@ public class StringHelper {
 
 	/**
 	 * 生成指定位之间的随机数
-	 * 
+	 *
 	 * @param min
 	 * @param max
 	 * @return int
@@ -811,7 +898,7 @@ public class StringHelper {
 
 	/**
 	 * 生成length位数字
-	 * 
+	 *
 	 * @param length
 	 * @return int
 	 */
@@ -821,7 +908,7 @@ public class StringHelper {
 
 	/**
 	 * 生成length位数字
-	 * 
+	 *
 	 * @param length
 	 * @return long
 	 */
@@ -831,7 +918,7 @@ public class StringHelper {
 
 	/**
 	 * 生成length位数字
-	 * 
+	 *
 	 * @param length
 	 * @return String
 	 */
@@ -841,7 +928,7 @@ public class StringHelper {
 
 	/**
 	 * 生成随机数字的字符串
-	 * 
+	 *
 	 * @param length
 	 * @return String
 	 */
@@ -854,15 +941,13 @@ public class StringHelper {
 		}
 		String result = t.toString();
 		if (result.substring(0, 1).equalsIgnoreCase("0")) {
-			result.replaceAll("0", "1");
+			result = result.replaceAll("0", "1");
 		}
-
 		if (result.length() > length) {
 			result = result.substring(0, length);
 		} else if (result.length() < length) {
 			result = result + StringHelper.getRand(length - result.length());
 		}
-
 		return result;
 	}// end...
 
@@ -876,7 +961,7 @@ public class StringHelper {
 		String res = "";
 		for (int i = 0; i <= length; i++) {
 			double d = Math.random() * inputContent.length();
-			int pos = new Double(d).intValue();
+			int pos = (int)d;
 			res += new Character(inputContent.charAt(pos));
 		}
 		return res;
@@ -884,21 +969,22 @@ public class StringHelper {
 
 	/**
 	 * 判断字符串是否为空
-	 * 
+	 *
 	 * @param str
 	 * @return boolean
 	 */
 	public static boolean isNull(String[] str) {
 		for (int i = 0; i < str.length; i++) {
-			if (isNull(str[i]))
+			if (isNull(str[i])) {
 				return true;
+			}
 		}
 		return false;
 	}
 
 	/**
 	 * 字符串是否为数字
-	 * 
+	 *
 	 * @param str
 	 * @return boolean
 	 */
@@ -908,37 +994,40 @@ public class StringHelper {
 
 	/**
 	 * 判断字符串中的每个字符是否都是数字
-	 * 
+	 *
 	 * @param str
 	 * @return boolean
 	 */
 	public static boolean isDigit(String[] str) {
 		for (int i = 0; i < str.length; i++) {
-			if (!isDigit(str[i]))
+			if (!isDigit(str[i])) {
 				return false;
+			}
 		}
 		return true;
 	}
 
 	/**
 	 * 判断字符串是否都是数字
-	 * 
+	 *
 	 * @param str
 	 * @return boolean
 	 */
 	public static boolean isDigit(String str) {
-		if (isNull(str))
+		if (isNull(str)) {
 			throw new NullPointerException();
+		}
 		for (int i = 0, size = str.length(); i < size; i++) {
-			if (!Character.isDigit(str.charAt(i)))
+			if (!Character.isDigit(str.charAt(i))) {
 				return false;
+			}
 		}
 		return true;
 	}// end....
 
 	/**
 	 * 得到STACK中信息
-	 * 
+	 *
 	 * @param e
 	 * @return String
 	 */
@@ -958,15 +1047,16 @@ public class StringHelper {
 
 	/**
 	 * 将输入的字符按指定的正则式转换
-	 * 
+	 *
 	 * @param str
 	 * @param regEx
 	 * @param code
 	 * @return String
 	 */
 	private static String insteadCode(String str, String regEx, String code) {
-		if (isNull(str))
+		if (isNull(str)) {
 			return "";
+		}
 		Pattern p = Pattern.compile(regEx);
 		Matcher m = p.matcher(str);
 		String s = m.replaceAll(code);
@@ -975,13 +1065,14 @@ public class StringHelper {
 
 	/**
 	 * 将HTML的关键字替换输出
-	 * 
+	 *
 	 * @param sourceStr
 	 * @return String
 	 */
 	public static String toHtml(String sourceStr) {
-		if (isNull(sourceStr))
+		if (isNull(sourceStr)) {
 			return "";
+		}
 		String targetStr;
 		targetStr = insteadCode(sourceStr, ">", "&gt;");
 		targetStr = insteadCode(targetStr, "<", "&lt;");
@@ -995,7 +1086,7 @@ public class StringHelper {
 	 * <li>/ 分隔目录和子目录 %2F <br/> <li>? 分隔实际??URL 和参??%3F<br/> <li>% 指定特殊字符 %25
 	 * <br/> <li># 表示书签 %23 <br/> <li>& URL 中指定的参数间的分隔??%26 <br/> <li>=URL
 	 * 中指定参数的??%3D <br/>
-	 * 
+	 *
 	 * @param parameter
 	 * @return String
 	 */
@@ -1010,34 +1101,36 @@ public class StringHelper {
 
 	/**
 	 * 按指定的起始和终止字符，切割字符??
-	 * 
+	 *
 	 * @param content
 	 * @param start
 	 * @param end
 	 * @return String
 	 */
 	public static String spiltStr(String content, String start, String end) {
-		if (!(content.indexOf(start) > -1) || !(content.indexOf(end) > -1))
+		if (!(content.indexOf(start) > -1) || !(content.indexOf(end) > -1)) {
 			throw new IndexOutOfBoundsException(
 					"[start Character or end Character,isn't exist in the specified content]");
+		}
 
 		int s = content.indexOf(start);
 
 		int e = start.equals(end) ? content.substring(s + 1).indexOf(end)
 				: content.indexOf(end);
 
-		if (s >= e)
+		if (s >= e) {
 			throw new IndexOutOfBoundsException(
 					"[the Character end is smallness Character start]");
-		else
+		} else {
 			content = new String(content.substring(s + 1, e));
+		}
 
 		return content.trim();
 	}// end...
 
 	/**
 	 * 得到????中按指定分割符切好的????元素
-	 * 
+	 *
 	 * @param content
 	 * @param split
 	 * @return String[]
@@ -1045,7 +1138,7 @@ public class StringHelper {
 	public static String[] splitStr(String content, String split) {
 
 		if (content.indexOf(split) < 0) {
-			return new String[] { content };
+			return new String[]{content};
 		}
 
 		int s = 0;
@@ -1067,25 +1160,26 @@ public class StringHelper {
 
 	/**
 	 * 按指定的字符位切割字符串(用于页面显示),剩余位字符用变量end中的字符表示 此方法带过滤转意字符功能
-	 * 
+	 *
 	 * @param str
 	 * @param num
 	 * @param end
 	 * @return String
-	 * @throws Cm2Exception
 	 */
 	public static String splitStr(String str, int num, String end) {
 		StringBuffer sb = new StringBuffer();
-		if (str == null || end == null)
+		if (str == null || end == null) {
 			throw new NullPointerException();
-		if (str.length() > num)
+		}
+		if (str.length() > num) {
 			str = sb.append(str.substring(0, num)).append(end).toString();
+		}
 		return toHtml(str);
 	}// end of splitStr()
 
 	/**
 	 * 按左补零右对齐的规则格式化内??
-	 * 
+	 *
 	 * @param content
 	 * @param count
 	 * @return String
@@ -1094,8 +1188,9 @@ public class StringHelper {
 		StringBuffer sb = new StringBuffer();
 		if (count > content.length()) {
 			for (int i = count - content.length(); content.length() < count
-					&& i != 0; i--)
+					&& i != 0; i--) {
 				sb.append("0");
+			}
 		}
 		sb.append(content);
 		return sb.toString();
@@ -1103,7 +1198,7 @@ public class StringHelper {
 
 	/**
 	 * 按左补零右对齐的规则格式化内??
-	 * 
+	 *
 	 * @param content
 	 * @param count
 	 * @return String
@@ -1112,8 +1207,9 @@ public class StringHelper {
 		String c = Integer.toString(content);
 		StringBuffer sb = new StringBuffer();
 		if (count > c.length()) {
-			for (int i = count - c.length(); c.length() < count && i != 0; i--)
+			for (int i = count - c.length(); c.length() < count && i != 0; i--) {
 				sb.append("0");
+			}
 		}
 		sb.append(content);
 		return sb.toString();
@@ -1121,7 +1217,7 @@ public class StringHelper {
 
 	/**
 	 * 按右补空格左对齐的规则格式化内容
-	 * 
+	 *
 	 * @param content
 	 * @param count
 	 * @return String
@@ -1131,8 +1227,9 @@ public class StringHelper {
 
 		sb.append(content);
 		if (count > content.length()) {
-			for (int i = 0; i < count - content.length(); i++)
+			for (int i = 0; i < count - content.length(); i++) {
 				sb.append(" ");
+			}
 		}
 
 		return sb.toString();
@@ -1140,7 +1237,7 @@ public class StringHelper {
 
 	/**
 	 * 按右补空格左对齐的规则格式化内容
-	 * 
+	 *
 	 * @param content
 	 * @param count
 	 * @return String
@@ -1150,15 +1247,16 @@ public class StringHelper {
 		String c = Integer.toString(content);
 		sb.append(content);
 		if (count > c.length()) {
-			for (int i = 0; i < count - c.length(); i++)
+			for (int i = 0; i < count - c.length(); i++) {
 				sb.append(" ");
+			}
 		}
 		return sb.toString();
 	}// end..
 
 	/**
 	 * 特殊处理号码
-	 * 
+	 *
 	 * @param phone
 	 * @return String
 	 */
@@ -1178,16 +1276,36 @@ public class StringHelper {
 	}
 
 	public static String toHex(String phoneno) {
-		if (isNull(phoneno))
+		if (isNull(phoneno)) {
 			return "";
+		}
 		long i = new Long(phoneno).longValue();
 		String i_16 = Long.toHexString(i);
 		return i_16;
 	}
 
 	/**
+	 * 如果字符串都是中文才返回true
+	 * @param c
+	 * @return
+	 */
+	public static boolean isChinese(String c){
+		if(isNull(c)){
+			return false;
+		}
+		char[] lst = c.toCharArray();
+		for(int i=0;i<lst.length;i++){
+			char e = lst[i];
+			if(!isChinese(e)){
+				return false;
+			}
+		}
+		return true;
+	}
+
+	/**
 	 * 判断字符是否是中文
-	 * 
+	 *
 	 * @param c
 	 * @return boolean
 	 */
@@ -1197,15 +1315,15 @@ public class StringHelper {
 
 		if (ub == Character.UnicodeBlock.CJK_UNIFIED_IDEOGRAPHS
 
-		|| ub == Character.UnicodeBlock.CJK_COMPATIBILITY_IDEOGRAPHS
+				|| ub == Character.UnicodeBlock.CJK_COMPATIBILITY_IDEOGRAPHS
 
-		|| ub == Character.UnicodeBlock.CJK_UNIFIED_IDEOGRAPHS_EXTENSION_A
+				|| ub == Character.UnicodeBlock.CJK_UNIFIED_IDEOGRAPHS_EXTENSION_A
 
-		|| ub == Character.UnicodeBlock.GENERAL_PUNCTUATION
+				|| ub == Character.UnicodeBlock.GENERAL_PUNCTUATION
 
-		|| ub == Character.UnicodeBlock.CJK_SYMBOLS_AND_PUNCTUATION
+				|| ub == Character.UnicodeBlock.CJK_SYMBOLS_AND_PUNCTUATION
 
-		|| ub == Character.UnicodeBlock.HALFWIDTH_AND_FULLWIDTH_FORMS) {
+				|| ub == Character.UnicodeBlock.HALFWIDTH_AND_FULLWIDTH_FORMS) {
 
 			return true;
 
@@ -1222,7 +1340,7 @@ public class StringHelper {
 	public static String getBASE64(byte[] b) {
 		String s = null;
 		if (b != null) {
-			s = new sun.misc.BASE64Encoder().encode(b);
+			s = Base64.getEncoder().encodeToString(b);
 		}
 		return s;
 	}
@@ -1234,9 +1352,8 @@ public class StringHelper {
 	public static byte[] getFromBASE64(String s) {
 		byte[] b = null;
 		if (s != null) {
-			BASE64Decoder decoder = new BASE64Decoder();
 			try {
-				b = decoder.decodeBuffer(s);
+				b = Base64.getDecoder().decode(s);
 				return b;
 			} catch (Exception e) {
 				e.printStackTrace();
@@ -1247,7 +1364,7 @@ public class StringHelper {
 
 	/**
 	 * 把链接的中文转成可识别链
-	 * 
+	 *
 	 * @param content
 	 * @return String
 	 * @throws UnsupportedEncodingException
@@ -1298,7 +1415,7 @@ public class StringHelper {
 
 	/**
 	 * 转换十六进制编码为字符串
-	 * 
+	 *
 	 * @param bytes
 	 * @return String
 	 */
@@ -1308,21 +1425,23 @@ public class StringHelper {
 		ByteArrayOutputStream baos = new ByteArrayOutputStream(
 				bytes.length() / 2);
 		// 将每2位16进制整数组装成一个字节
-		for (int i = 0; i < bytes.length(); i += 2)
+		for (int i = 0; i < bytes.length(); i += 2) {
 			baos.write((hexString.indexOf(bytes.charAt(i)) << 4 | hexString
 					.indexOf(bytes.charAt(i + 1))));
+		}
 		return new String(baos.toByteArray());
 	}
 
 	public static String fromUnicode(String str) {
-		if (str.indexOf("\\u") < 0)
+		if (str.indexOf("\\u") < 0) {
 			return str;
+		}
 		return fromUnicode(str.toCharArray(), 0, str.length(), new char[1024]);
 
 	}
 
 	public static String fromUnicode(char[] in, int off, int len,
-			char[] convtBuf) {
+									 char[] convtBuf) {
 
 		if (convtBuf.length < len) {
 
@@ -1366,67 +1485,67 @@ public class StringHelper {
 
 						switch (aChar) {
 
-						case '0':
+							case '0':
 
-						case '1':
+							case '1':
 
-						case '2':
+							case '2':
 
-						case '3':
+							case '3':
 
-						case '4':
+							case '4':
 
-						case '5':
+							case '5':
 
-						case '6':
+							case '6':
 
-						case '7':
+							case '7':
 
-						case '8':
+							case '8':
 
-						case '9':
+							case '9':
 
-							value = (value << 4) + aChar - '0';
+								value = (value << 4) + aChar - '0';
 
-							break;
+								break;
 
-						case 'a':
+							case 'a':
 
-						case 'b':
+							case 'b':
 
-						case 'c':
+							case 'c':
 
-						case 'd':
+							case 'd':
 
-						case 'e':
+							case 'e':
 
-						case 'f':
+							case 'f':
 
-							value = (value << 4) + 10 + aChar - 'a';
+								value = (value << 4) + 10 + aChar - 'a';
 
-							break;
+								break;
 
-						case 'A':
+							case 'A':
 
-						case 'B':
+							case 'B':
 
-						case 'C':
+							case 'C':
 
-						case 'D':
+							case 'D':
 
-						case 'E':
+							case 'E':
 
-						case 'F':
+							case 'F':
 
-							value = (value << 4) + 10 + aChar - 'A';
+								value = (value << 4) + 10 + aChar - 'A';
 
-							break;
+								break;
 
-						default:
+							default:
 
-							throw new IllegalArgumentException(
+								throw new IllegalArgumentException(
 
-							"Malformed \\uxxxx encoding.");
+										"Malformed \\uxxxx encoding.");
 
 						}
 
@@ -1478,38 +1597,10 @@ public class StringHelper {
 		return fromUnicode(unicode);
 	}
 
-	public static String splitContentByUnicodeWithUntilSpace(String content,
-			int startPos) {
-		content = content.substring(startPos);
-		String u = StringHelper.toUnicode(content.trim());
-		String res = "";
-
-		int max = 9999;
-		int[] min = new int[] {
-				u.indexOf("\\u0020") < 0 ? max : u.indexOf("\\u0020"),
-				u.indexOf("\\u0030") < 0 ? max : u.indexOf("\\u0030"),
-				u.indexOf("\\u007b") < 0 ? max : u.indexOf("\\u007b"),
-				u.indexOf("\\u007B") < 0 ? max : u.indexOf("\\u007B") };
-
-		int pos = MathHelper.getMinNumber(min);
-
-		u = u.substring(0, pos);
-
-		if (u.endsWith("\\u0020") || u.endsWith("\\u0030")
-				|| u.endsWith("\\u007b") || u.endsWith("\\u007B")) {
-			pos = pos - 5;
-		}
-		u = u.substring(0, pos);
-		res = StringHelper.fromUnicode(u);
-
-		return res;
-	}
-
 	/**
 	 * 将字符串转成unicode
-	 * 
-	 * @param str
-	 *            待转字符串
+	 *
+	 * @param str 待转字符串
 	 * @return unicode字符串
 	 */
 	public static String toUnicode(String str) {
@@ -1524,13 +1615,15 @@ public class StringHelper {
 			sb.append("\\u");
 			j = (c >>> 8); // 取出高8位
 			tmp = Integer.toHexString(j);
-			if (tmp.length() == 1)
+			if (tmp.length() == 1) {
 				sb.append("0");
+			}
 			sb.append(tmp);
 			j = (c & 0xFF); // 取出低8位
 			tmp = Integer.toHexString(j);
-			if (tmp.length() == 1)
+			if (tmp.length() == 1) {
 				sb.append("0");
+			}
 			sb.append(tmp);
 
 		}
@@ -1539,13 +1632,14 @@ public class StringHelper {
 
 	/**
 	 * 转换为16进制字符串
-	 * 
+	 *
 	 * @param str
 	 * @return String
 	 */
 	public static String toHexString(String str) {
-		if (str.length() <= 0)
+		if (str.length() <= 0) {
 			return "";
+		}
 
 		String hexString = "0123456789ABCDEF ";
 		// 根据默认编码获取字节数组
@@ -1562,14 +1656,16 @@ public class StringHelper {
 
 	/**
 	 * 取一个整数的指定百分比的整数
-	 * 
+	 *
 	 * @param max
 	 * @param perc
 	 * @return Integer
 	 */
 	public static Integer findPerc(Integer max, Integer perc) {
 		Double a = max * (perc * 0.01);
-		return new Long(Math.round(a)).intValue();
+		long mathRes = Math.round(a);
+		int res = (int)mathRes;
+		return res;
 	}
 
 	public static Double formartDecimalToDouble(Double d) {
@@ -1623,6 +1719,7 @@ public class StringHelper {
 		List<Map.Entry<K, V>> list = new LinkedList<Map.Entry<K, V>>(
 				map.entrySet());
 		Collections.sort(list, new Comparator<Map.Entry<K, V>>() {
+			@Override
 			public int compare(Map.Entry<K, V> o1, Map.Entry<K, V> o2) {
 				return (o1.getValue()).compareTo(o2.getValue());
 			}
@@ -1655,9 +1752,9 @@ public class StringHelper {
 
 	/**
 	 * 获取一个URL后的所有参数及值，k,v格式
-	 * 
-	 * @param URL
-	 * @return Map<String,String>
+	 *
+	 * @param url
+	 * @return Map<String, String>
 	 */
 	public static Map<String, String> getRequestParameters(String url) {
 		Map<String, String> mapRequest = new HashMap<String, String>();
@@ -1675,7 +1772,7 @@ public class StringHelper {
 			if (arrSplitEqual.length > 1) {
 				mapRequest.put(arrSplitEqual[0], arrSplitEqual[1]);
 			} else {
-				if (arrSplitEqual[0] != "") {
+				if (arrSplitEqual[0]!=null && !"".equals(arrSplitEqual[0])) {
 					// 只有参数没有值，不加入
 					mapRequest.put(arrSplitEqual[0], "");
 				}
@@ -1686,37 +1783,41 @@ public class StringHelper {
 
 	/**
 	 * 获取一个URL后的指定参数的值
-	 * 
+	 *
 	 * @param url
 	 * @param key
 	 * @return String
 	 */
 	public static String getRequestValue(String url, String key) {
 		Map<String, String> m = getRequestParameters(url);
-		if (m == null || !m.containsKey(key))
+		if (m == null || !m.containsKey(key)) {
 			return "";
+		}
 		return m.get(key).toString();
 	}
 
+	private static String IDCOARD_PATTERN = "(\\d{14}[0-9a-zA-Z])|(\\d{17}[0-9a-zA-Z])";
+
 	/**
 	 * 判定是否为有效的身份证
-	 * 
+	 *
 	 * @param idcard
 	 * @return boolean
 	 */
 	public static boolean isIdcard(String idcard) {
 		Pattern p = null; // 正则表达??
 		Matcher m = null; // 操作的字符串
-		p = Pattern.compile("(\\d{14}[0-9a-zA-Z])|(\\d{17}[0-9a-zA-Z])");// 匹配移动手机号码
+		p = Pattern.compile(IDCOARD_PATTERN);// 匹配移动手机号码
 		m = p.matcher(idcard);
-		if (m.matches())
+		if (m.matches()) {
 			return true;
+		}
 		return false;
 	}
 
 	/**
 	 * 时间段合法性检测,规则：新的时间段不能和原来的时间段有交集
-	 * 
+	 *
 	 * @param oldStartTime
 	 * @param oldEndTime
 	 * @param newStartTime
@@ -1724,7 +1825,7 @@ public class StringHelper {
 	 * @return boolean
 	 */
 	public static boolean checkTimeArea(Long oldStartTime, Long oldEndTime,
-			Long newStartTime, Long newEndTime) {
+										Long newStartTime, Long newEndTime) {
 		if (newStartTime >= oldStartTime && newStartTime <= oldEndTime) {
 			return false;
 		}
@@ -1734,36 +1835,300 @@ public class StringHelper {
 		return true;
 	}
 
-	public static void main(String[] args) throws Exception {
-
-		Calendar curCal = Calendar.getInstance();
-		SimpleDateFormat datef = new SimpleDateFormat("yyyy-MM-dd");
-		Date s = datef.parse("2012-10-15");
-		Date e = datef.parse("2012-12-15");
-		// datef.parse("2012-10-15");
-		System.out.println("------------------------");
-		System.out.println(getFirstDay(s.getTime()));
-		System.out.println(getEndDay(e.getTime()));
-		System.out.println("------------------------");
-		System.out.println(getBeforeTimeStr(2, 3, System.currentTimeMillis()));
-		System.out.println(getSystime("yyyy_MM-dd",
-				getBeforeTimeLong(2, 3, System.currentTimeMillis())));
-		System.out.println("------------------------");
-		System.out.println(formartDecimalToStr(new Double(1.34567)));
-		System.out.println(getPreMonth());
-		List<String> timeList = getTimeDistance("yyyy-MM", 12);
-		for (int i = 0; i < timeList.size(); i++) {
-
-			System.out.println(timeList.get(i));
+	/**
+	 * 转成加引号的字符串
+	 *
+	 * @param array
+	 * @return String
+	 */
+	public static String arrayToStringVarchar(Object[] array) {
+		StringBuffer sb = new StringBuffer();
+		for (int i = 0; i < array.length; i++) {
+			sb.append("'").append(array[i]).append("'");
+			if (i < array.length - 1) {
+				sb.append(",");
+			}
 		}
-		String time = "2014-03-22 17:04:32";
-		SimpleDateFormat dateff = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+		return sb.toString();
+	}
 
-		Date td1 = dateff.parse(time);
-		Date td2 = new Date(System.currentTimeMillis());
-		System.out.println(getDiffMinute(td1, td2));
+	/**
+	 * 转成不加引号的字符串
+	 *
+	 * @param array
+	 * @return String
+	 */
+	public static String arrayToStringNumber(Object[] array) {
+		StringBuffer sb = new StringBuffer();
+		for (int i = 0; i < array.length; i++) {
+			sb.append(array[i]);
+			if (i < array.length - 1) {
+				sb.append(",");
+			}
+		}
+		return sb.toString();
+	}
 
-		String mail = "fjw1ie_fjiwe@1126.com";
-		System.out.println(isEmail(mail));
+	private static String[] getLst(String content) {
+		List<String> res = new ArrayList<>();
+		int s = 0;
+		int e = 1;
+		for (int i = 0; i < content.length(); i++) {
+			String temp = content.substring(s, e);
+			res.add(temp);
+			s++;
+			e++;
+		}
+		return res.toArray(new String[0]);
+	}
+
+	/**
+	 * 获得主机IP
+	 *
+	 * @return String
+	 */
+	public static boolean isWindowsOS() {
+		boolean isWindowsOS = false;
+		String osName = System.getProperty("os.name");
+		if (osName.toLowerCase().indexOf("windows") > -1) {
+			isWindowsOS = true;
+		}
+		return isWindowsOS;
+	}
+
+	/**
+	 * 获取本机ip地址，并自动区分Windows还是linux操作系统，能过滤指定IP段，多网卡情况，例如传入：192.168这样的
+	 *
+	 * @param filter 空的话就是取第一个
+	 * @return String
+	 */
+	public static String getLocalIP(Set<String> filter) {
+		String sIP = "";
+		InetAddress ip = null;
+		try {
+			// 如果是Windows操作系统
+			if (isWindowsOS()) {
+				ip = InetAddress.getLocalHost();
+			}
+			// 如果是Linux操作系统
+			else {
+				boolean bFindIP = false;
+				Enumeration<NetworkInterface> netInterfaces = (Enumeration<NetworkInterface>) NetworkInterface
+						.getNetworkInterfaces();
+				while (netInterfaces.hasMoreElements()) {
+					if (bFindIP) {
+						break;
+					}
+					NetworkInterface ni = (NetworkInterface) netInterfaces
+							.nextElement();
+					// ----------特定情况，可以考虑用ni.getName判断
+					// 遍历所有ip
+					Enumeration<InetAddress> ips = ni.getInetAddresses();
+					while (ips.hasMoreElements()) {
+						ip = (InetAddress) ips.nextElement();
+
+						if (StringHelper.iskIP(ip.getHostAddress())) {
+							// 检查过滤
+							boolean isfilter = false;
+							if (filter != null) {
+								Iterator<String> it = filter.iterator();
+								while (it.hasNext()) {
+									String ft2 = it.next();
+									if (ip.getHostAddress().startsWith(ft2)) {
+										if (ip.getHostAddress().startsWith(ft2)) {
+											isfilter = true;
+											continue;
+										}
+									} else {
+										bFindIP = false;
+										break;
+									}
+								}
+							}
+							if (!isfilter) {
+								bFindIP = true;
+								break;
+							}
+						}
+
+					}
+
+				}
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+
+		if (null != ip) {
+			sIP = ip.getHostAddress();
+		}
+		return sIP;
+	}
+
+	/**
+	 * 获取本机ip地址，并自动区分Windows还是linux操作系统
+	 *
+	 * @return String
+	 */
+	public static String getLocalIP() {
+		return getLocalIP(null);
+	}
+
+	/**
+	 * 驼峰命名法工具
+	 *
+	 * @return toCamelCase(" hello_world ") == "helloWorld"
+	 * toCapitalizeCamelCase("hello_world") == "HelloWorld"
+	 * toUnderScoreCase("helloWorld") = "hello_world"
+	 */
+	public static String toCamelCase(String s) {
+		if (s == null) {
+			return null;
+		}
+
+		s = s.toLowerCase();
+
+		StringBuilder sb = new StringBuilder(s.length());
+		boolean upperCase = false;
+		for (int i = 0; i < s.length(); i++) {
+			char c = s.charAt(i);
+
+			if (c == SEPARATOR) {
+				upperCase = true;
+			} else if (upperCase) {
+				sb.append(Character.toUpperCase(c));
+				upperCase = false;
+			} else {
+				sb.append(c);
+			}
+		}
+
+		return sb.toString();
+	}
+
+	/**
+	 * 驼峰命名法工具
+	 *
+	 * @return toCamelCase(" hello_world ") == "helloWorld"
+	 * toCapitalizeCamelCase("hello_world") == "HelloWorld"
+	 * toUnderScoreCase("helloWorld") = "hello_world"
+	 */
+	public static String toUnderScoreCase(String s) {
+		if (s == null) {
+			return null;
+		}
+
+		StringBuilder sb = new StringBuilder();
+		boolean upperCase = false;
+		for (int i = 0; i < s.length(); i++) {
+			char c = s.charAt(i);
+
+			boolean nextUpperCase = true;
+
+			if (i < (s.length() - 1)) {
+				nextUpperCase = Character.isUpperCase(s.charAt(i + 1));
+			}
+
+			if ((i > 0) && Character.isUpperCase(c)) {
+				if (!upperCase || !nextUpperCase) {
+					sb.append(SEPARATOR);
+				}
+				upperCase = true;
+			} else {
+				upperCase = false;
+			}
+
+			sb.append(Character.toLowerCase(c));
+		}
+
+		return sb.toString();
+	}
+
+	public static Date stringTodate(String date) throws ParseException {
+		SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+		return sdf.parse(date);
+	}
+
+	/**
+	 * 处理模板占位符替换
+	 *
+	 * @param content
+	 * @param target
+	 * @param parameter
+	 * @return String
+	 */
+	public static String processTemp(String content, String target,
+									 List<String> parameter) {
+		String temp = content;
+		int s = 0;
+		int e = 0;
+		int l = target.length();
+		List<String> tl = parameter;
+		if (!content.contains(target) || parameter == null
+				|| parameter.size() <= 0) {
+			return content;
+		}
+		s = content.indexOf(target);
+		e = s + l;
+		if (s == 0) {
+			temp = tl.get(0) + temp.substring(e);
+			tl.remove(0);
+		} else {
+			temp = temp.substring(0, s) + tl.get(0) + temp.substring(e);
+			tl.remove(0);
+		}
+		if (parameter.size() > 0) {
+			return processTemp(temp, target, tl);
+		}
+		return temp;
+	}
+
+	/**
+	 * 获取某年第一天日期
+	 * @return Date
+	 */
+	public static String getYearFirst(String year){
+		SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+		Calendar currCal=Calendar.getInstance();
+		int currentYear = currCal.get(Calendar.YEAR);
+		Calendar calendar = Calendar.getInstance();
+		calendar.clear();
+		calendar.set(Calendar.YEAR, Integer.parseInt(year));
+		Date currYearFirst = calendar.getTime();
+		return sdf.format(currYearFirst);
+	}
+
+	/**
+	 * 获取某年最后一天日期
+	 * @return Date
+	 */
+	public static String getYearLast(String year){
+		SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+		Calendar calendar = Calendar.getInstance();
+		calendar.clear();
+		calendar.set(Calendar.YEAR,  Integer.parseInt(year));
+		calendar.roll(Calendar.DAY_OF_YEAR, -1);
+		Date currYearLast = calendar.getTime();
+		return sdf.format(currYearLast);
+	}
+	/**
+	 * 获取当月开始时间戳
+	 * @return
+	 */
+	public static String getMinMonthDate(String year, String month) {
+		SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+		YearMonth yearMonth = YearMonth.of(Integer.parseInt(year),Integer.parseInt( month));
+		LocalDate localDate = yearMonth.atDay(1);
+		LocalDateTime startOfDay = localDate.atStartOfDay();
+		ZonedDateTime zonedDateTime = startOfDay.atZone(ZoneId.of("Asia/Shanghai"));
+		return sdf.format(Date.from(zonedDateTime.toInstant()));
+	}
+	public static String getMaxMonthDate(String year, String month) {
+		SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+		YearMonth yearMonth = YearMonth.of(Integer.parseInt(year), Integer.parseInt(month));
+		LocalDate endOfMonth = yearMonth.atEndOfMonth();
+		LocalDateTime localDateTime = endOfMonth.atTime(23, 59, 59, 999);
+		ZonedDateTime zonedDateTime = localDateTime.atZone(ZoneId.of("Asia/Shanghai"));
+		return sdf.format(Date.from(zonedDateTime.toInstant()));
 	}
 }
